--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -33,7 +33,9 @@
     "@angular/platform-browser": "^20.2.3",
     "@angular/platform-browser-dynamic": "^20.2.3",
     "@angular/router": "^20.2.0",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
