--- a/app/.gitignore
+++ b/app/.gitignore
@@ -53,3 +53,10 @@ node_modules/
 __pycache__/
 .Python
 
+# Angular cache and build files
+/app/frontend/dist/
+/app/frontend/tmp/
+/app/frontend/out-tsc/
+/app/frontend/.angular/
+/app/frontend/.angular/cache/
+.angular/
